Avanzo con la posicion de Sabato en la pregunta 1

--- a/page.layout.tex
+++ b/page.layout.tex
@@ -3,7 +3,7 @@
 %\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{\thesection\ - #1}}
 \fancyhf{}
-\fancyhead[LO]{AEDA - Take Home Exam}
+\fancyhead[LO]{Seminario sobre Computación, Ciencia y Sociedad en Argentina - Preguntas finales}
 \fancyfoot[LO]{\small{Iv\'an Arcuschin - 678/13}}
 \fancyfoot[RO]{\thepage}
 \renewcommand{\headrulewidth}{0.5pt}
