--- a/pregunta-1.tex
+++ b/pregunta-1.tex
@@ -42,38 +42,8 @@ plazo, explotando las potencialidades existentes y desarrollandose respetando el
 
 \subsection*{Comparación con la posición de Jorge Sábato}
 
-Notas Sábato:
-- no al colonialismo mental
-- pensar el desarrollo tecnologico como motor del desarrollo social y economico del país.
-- solo mediante ese manejo autonomo tecnologico podra una nacion comenzar a marchar
-    en la dirección que eventualmente le permitira disponer en cada caso de la tecnologia más ajustada
-    a sus propios objetivos, más respestuosa de su acervo cultural, más conveniente para sus propias
-    necesidades y más adecuadas a sus dotaciones de recursos y factores.
-
-- tecnologia nacional: manejas la tencologia como mas le convenga al país,
-- ¿Qué desarrollar y que comprar ? A veces conviene desarrollar primero, para luego importar en mejores condiciones.
-- La relacion entre politica tecnologica y economica, es determinante.
-- En particular, el uso del poder de compra del estado es el instrumento más importante
-
-- se va a alcanzar autonomia tecnologica: no como autonomia que reniega de la participacion de tecnologica extranjera,
-    sino como capacidad tecnologica autonoma, de generacion de tecnologia y de incorporacion de tecnologia estranjera a modo de configuracion de paquetes.
-    Lo contrario sería la desagregacion de paquetes tecnologicos, es decir: una participacion de componentes nacionales.
-
-- dependencia tecnologica: incorporación sumisa de las tecnologías disponibles por razones de disponibilidades y precios en el mercado.
-- autonomia: capacidad de desarrollo local: construir el triangulo, interrelacinando los tres vertices. Solo puede pasar si el estado tiene
-    una participacion clave en la estructura productiva.
-- presidente de SERBA: Empieza identificando cuales son los productos en los cuales puede haber desarrollo
-    tecnologico local y en los cuales podíamos prescindir de componentes importados.
-- Industrialización sustitutiva de importaciones.
-- Regimenes de promocion del desarrollo industrial, bastante protectivos: proteger a la industria naciente.
-- De vuelta: el compre nacional es un factor clave para la autonomia tecnologica, muestra una preferencia en cuanto proveedores externos.
-- Regulación de transferencia de tecnología extranjera
-
--Por tanto, la desagregación tecnológica es también un instrumento de política industrial que busca maximizar
-la participación propia en la ejecución de proyectos de inversión por medio del incremento del componente tecnológico
- nacional en la producción de un bien o de un servicio. Para eso es preciso investigar, en detalle, los agregados humanos,
-  económicos y técnicos de cada uno de los proyectos de inversión.
-
-% http://www.fundacionsadosky.org.ar/seminario-ciencia-y-tecnologia-en-el-pensamiento-de-jorge-sabato-oscar-varsavsky-y-amilcar-herrera/
+\input{sabato.tex}
 
 \subsection*{Comparación con la posición de Rolando García}
+
+\input{rolando.tex}
