Avances en la pregunta 1

--- a/informe.tex
+++ b/informe.tex
@@ -69,6 +69,10 @@
 %\tableofcontents
 
 \newpage
+\section*{Repaso de la posición de Gustavo Bayer}
+\input{bayer}
+
+\newpage
 \section*{Pregunta 1}
 \input{pregunta-1}
 
