--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -2,3 +2,21 @@
  Comparar la posición de Bayer con el planteo general del desarrollismo. ¿En qué se parecen y en qué se diferencian?
 
  \subsection*{Comparación con la posición del desarrollismo}
+
+ El planteo general del desarrollismo es:
+
+ \begin{itemize}
+     \item
+ \end{itemize}
+
+ Las similitudes son:
+
+ \begin{itemize}
+     \item
+ \end{itemize}
+
+ Y las diferencias:
+
+ \begin{itemize}
+     \item
+ \end{itemize}
