--- a/sabato.tex
+++ b/sabato.tex
@@ -88,7 +88,7 @@ Por último, quisiera dar un ejemplo concreto que presenta Sábato en su artícu
 %     a sus propios objetivos, más respestuosa de su acervo cultural, más conveniente para sus propias
 %     necesidades y más adecuadas a sus dotaciones de recursos y factores.
 %
-% - tecnologia nacional: manejas la tencologia como mas le convenga al país,
+% - tecnologia nacional: manejar la tencologia como mas le convenga al país,
 % - ¿Qué desarrollar y que comprar ? A veces conviene desarrollar primero, para luego importar en mejores condiciones.
 % - La relacion entre politica tecnologica y economica, es determinante.
 % - En particular, el uso del poder de compra del estado es el instrumento más importante
