--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -3,10 +3,21 @@
 
  \subsection*{Comparación con la posición del desarrollismo}
 
- El planteo general del desarrollismo es:
+ El planteo general del desarrollismo es :
+% Youtube: Prebisch y los terminos de intercambio https://www.youtube.com/watch?v=sqUQQX1dTx8
+ \begin{itemize}
+     \item Los terminos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplian la brecha entre paises desarrollados y subdesarrollados. Esto es lo que se conoce como la Tesis Prebisch-Singer.
+     \item Los paises desarrollados deberían combatir este hecho mediante Estados activos, con políticas económicas que impulsen la industrialización, para romper así la asimetria que genera el sistema capitalista dentro de los intercambios internacionales, y alcanzar la autonomía.
+    %  \item En vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
+    \item La amplitud de los ciclos economicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza economica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caida.
+ \end{itemize}
+
+ Entonces los países en vías de desarrollo deben:
 
  \begin{itemize}
-     \item
+     \item Buscar la diversificación productiva e integración regional:  superar la limitada diversificación productiva y la heterogeneidad estructural.
+     \item Buscar el desarrollo con igualdad: promover un desarrollo con equidad, cimentado en los cambios en la estructura productiva.
+     \item Buscar una nueva inserción en el orden mundial: tranformar las formas de inserción de América Latina en el orden mundial
  \end{itemize}
 
  Las similitudes son:
