--- a/informe.tex
+++ b/informe.tex
@@ -1,58 +1,24 @@
 \documentclass[a4paper]{article}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{fancyhdr}
-\usepackage{charter} % tipografia
 %\usepackage{graphicx}
 \usepackage[pdftex]{graphicx}
 \usepackage{sidecap}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{booktabs}
-\usepackage{makeidx}
 \usepackage{float}
-\usepackage{amsmath, amsthm, amssymb}
-\newtheorem{theorem}{Teorema}[section]
-\newtheorem{corollary}{Corolario}[theorem]
-\newtheorem{lemma}[theorem]{Lema}
-\usepackage{amsfonts}
-\usepackage{sectsty}
-\usepackage{charter}
-\usepackage{wrapfig}
-\usepackage{listings}
-\usepackage{hyperref} % links
-\usepackage{algorithm} %http://www.ctan.org/pkg/algorithms
-\usepackage{algorithmic}
 \input{codesnippet}
 \input{page.layout}
-% \setcounter{secnumdepth}{2}
-\usepackage{underscore}
 \usepackage{caratula}
 \usepackage{url}
-\usepackage[usenames,dvipsnames]{xcolor}
-\lstset{
-    language=C++,
-    basicstyle=\ttfamily,
-    keywordstyle=\color{blue}\ttfamily,
-    stringstyle=\color{red}\ttfamily,
-    commentstyle=\color{ForestGreen}\ttfamily,
-    morecomment=[l][\color{magenta}]{\#}
-}
+% \usepackage[usenames,dvipsnames]{xcolor}
 
 % *********************** %
-% Ejercicio 2 - Agregado
-% Grafos
-\usepackage{tikz}
-\usetikzlibrary{positioning}
-\usetikzlibrary{graphs}
-\usetikzlibrary{calc}
-\usetikzlibrary{arrows}
 % Otros
-\usepackage{arrayjobx}
 \usepackage{natbib}
 \usepackage{enumitem}
-\usepackage{multicol}
-\usepackage{pgfplots}
+% \usepackage{multicol}
 % *********************** %
 
 \begin{document}
