Cambios menores posicion Bayer

--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -7,7 +7,7 @@
 % Youtube: Prebisch y los terminos de intercambio https://www.youtube.com/watch?v=sqUQQX1dTx8
  \begin{itemize}
      \item Los terminos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplian la brecha entre paises desarrollados y subdesarrollados. Esto es lo que se conoce como la Tesis Prebisch-Singer.
-     \item Los paises desarrollados deberían combatir este hecho mediante Estados activos, con políticas económicas que impulsen la industrialización, para romper así la asimetria que genera el sistema capitalista dentro de los intercambios internacionales, y alcanzar la autonomía.
+     \item Los paises subdesarrollados deberían combatir este hecho mediante Estados activos, con políticas económicas que impulsen la industrialización, para romper así la asimetria que genera el sistema capitalista dentro de los intercambios internacionales, y alcanzar la autonomía.
     %  \item En vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
     \item La amplitud de los ciclos economicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza economica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caida.
  \end{itemize}
