--- a/sabato.tex
+++ b/sabato.tex
@@ -57,7 +57,7 @@ A continuación Sábato pasa a analizar las \textbf{extrarelaciones}.
 
 En una sociedad donde funciona el triángulo de relaciones, las aperturas que se realicen hacia el exterior en materia de exportación de ciencia y tecnología original o de adaptación de tecnología importada, producen beneficios reales, ya sea a corto o largo plazo.
 
-Muy distinto es cuando estas aperturas se realian entre vertices aislados con un triangulo plenamente desarrollado. Este problema es muy caracteristico de las sociedades latinoamericanas, y explica un sin fin de prolemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el cientifico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automaticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
+Muy distinto es cuando estas aperturas se realizan entre vertices aislados con un triangulo plenamente desarrollado. Este problema es muy caracteristico de las sociedades latinoamericanas, y explica un sin fin de prolemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el cientifico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automaticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
 
 \vspace{0.5em}
 
