--- a/bayer.tex
+++ b/bayer.tex
@@ -1,24 +1,24 @@
-Gustavo F. Bayer define la \textbf{autonomía general de una nación}  como la capacidad
+Gustavo Bayer define la \textbf{autonomía general de una nación}  como la capacidad
 de un estado nacional para actuar según sus propios intereses. Dicha capacidad
 responde a un proceso dinámico en el que no basta con simplemente conquistar la autonomía,
 sino que es necesario mantenerla una vez obtenida.
 
 Luego, caracteriza las bases de la autonomía nacional:
 \begin{itemize}
-    \item Una configuración de poder nacional, que ocurre cuando la acción del estado nacional
+    \item Una \textbf{configuración de poder nacional}, que ocurre cuando la acción del estado nacional
         influencia nitidamente las acciones de los otros.
-    \item Autosuficiencia nacional, que permite minimizar la capacidad de influencia
+    \item \textbf{Autosuficiencia nacional}, que permite minimizar la capacidad de influencia
         de los otros estados sobre el nuestro.
 \end{itemize}
 
-En este escenario, Bayer plantea que el rol de la política tecnólogica es el de:
+En este escenario, Bayer plantea que el rol de la \textbf{política tecnólogica} es el de:
 \begin{itemize}
     \item Suministrar a corto plazo elementos útiles para la ampliación del poder nacional.
         Por ejemplo: explotación y transformación de materias primas. Es decir,
         deberá tender a crear condiciones para la explotación del excedente potencial de los recursos
         naturales. \textbf{Debe lograr adaptar las tecnologías transferidas del exterior a los
         recursos nacionales}.
-    \item Satisfacer las necesidades sociales, buscando un aumento de la calidad de vida
+    \item \textbf{Satisfacer las necesidades sociales}, buscando un aumento de la calidad de vida
         en la población y no solo el aumento de la producción como meta principal.
         Se trata de crear condiciones de oferta para satisfacer necesidades ya existentes,
         y no de introducir tecnología que precisa un mercado consumidor,
@@ -27,9 +27,9 @@ En este escenario, Bayer plantea que el rol de la política tecnólogica es el d
 
 Y el rol de la política cientifica:
 \begin{itemize}
-    \item Suministrar a largo plazo, los conocimientos necesarios para la sustentación de la autonomía. En particular, ampliar y profundizar los conocimientos, dirigidos por las necesidades del sistema en si, y no caer en el academicismo o la torre de marfil.
+    \item Suministrar a largo plazo, los conocimientos necesarios para la sustentación de la autonomía. En particular, \textbf{ampliar y profundizar los conocimientos}, dirigidos por las necesidades del sistema en si, y no caer en el academicismo o la torre de marfil.
         Además se debe buscar una fuerte integración entre las diversas areas del conocimiento adquirido.
-    \item Buscar la autosuficiencia del sistema cientifico, buscando la autosustentación, que luego le permitirá actuar como factor de activación de las potencialidades de autosuficiencia nacional a través de la calificación.
+    \item Buscar la \textbf{autosuficiencia del sistema cientifico}, buscando la autosustentación, que luego le permitirá actuar como factor de activación de las potencialidades de autosuficiencia nacional a través de la calificación.
 \end{itemize}
 
 En resumen, la política tecnológica deberá permitir conquistar la autonomía a corto
@@ -44,6 +44,6 @@ Y luego la política cientifica será la encargada de buscar nuevas potencialida
 
 \vspace{0.5em}
 
-Para finalizar, Bayer hace incapie en que debe existir una decisión política de conquista de la autonomía nacional. No se puede esperar la conquista de la autonomía a partir del crecimiento vegetativo de sus bases de poder y/o autosuficiencia, ya que si una nación que tiene potencialidades de poder no ha logrado su autonomía, es porque existen patrones de dependencia que le impiden despegarse del yugo de los paises desarrollados, junto con barreras sociales o materiales que le impiden alcanzar la autosuficiencia.
+Para finalizar, Bayer hace incapie en que \textbf{debe existir una decisión política de conquista de la autonomía nacional}. No se puede esperar la conquista de la autonomía a partir del crecimiento vegetativo de sus bases de poder y/o autosuficiencia, ya que si una nación que tiene potencialidades de poder no ha logrado su autonomía, es porque existen patrones de dependencia que le impiden despegarse del yugo de los paises desarrollados, junto con barreras sociales o materiales que le impiden alcanzar la autosuficiencia.
 
-En caso de que está decision política no existiese, cualquier crecimiento económico o desarrollo deberá ser encarado con reservas: el crecimiento económico, como benefactor de determinadas capas sociales, concentrador; el crecimiento cientficio, desvinculado de la sociedad como un todo, un crecimiento por el crecimiento (la \textit{torre de marfil}).
+En caso de que está decision política no existiese, cualquier crecimiento económico o desarrollo deberá ser encarado con reservas: el crecimiento económico, como benefactor de determinadas capas sociales, concentrador; el crecimiento cientficio, desvinculado de la sociedad como un todo, un crecimiento por el crecimiento (la llamada \textit{torre de marfil}).
