--- a/rolando.tex
+++ b/rolando.tex
@@ -3,20 +3,20 @@ Debido a la dificultad de encontrar textos especificos de Rolando García que ha
 En dicha charla, García menciona que:
 
 \begin{itemize}
-    \item ``Todo proceso profundo de transformación, en cualquier dominio, comienza con la apertura de nuevas vías de acción.''
-    \item ``Las acciones emprendidas sólo tienen sentido si se comprende cuáles eran sus objetivos.''.
-    \item ``En el contexto particular de las universidades se discute mucho más sobre problemáticas puntuales que sobre el proyecto institucional en el que deberían de estar inscritas. Y es necesario subrayar que existe una gran diferencia entre un proyecto institucional y un programa de medidas propuestas o adoptadas en la coyuntura''
+    \item ``Todo proceso profundo de transformación, en cualquier dominio, comienza con la apertura de nuevas vías de acción''.
+    \item ``Las acciones emprendidas sólo tienen sentido si se comprende cuáles eran sus objetivos''.
+    \item ``En el contexto particular de las universidades se discute mucho más sobre problemáticas puntuales que sobre el proyecto institucional en el que deberían de estar inscritas. Y es necesario subrayar que existe una gran diferencia entre un proyecto institucional y un programa de medidas propuestas o adoptadas en la coyuntura''.
 \end{itemize}
 
 Con lo cual me inclino a pensar que García entiende, como Bayer, que la conquista de la autonomía de los paises en vias de desarrollo no se puede lograr de manera vegetativa, sin tomar acciones concretas al respecto. Es necesario buscar nuevas alternativas que permitan romper el ciclo de dependencia (lo que Bayer llama, explotar las potencialidades existentes).
 
-Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta politícas de estado que se enmarquen en un proyecto de conquista ( y luego mantenimiento) de la autonomia.
+Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista ( y luego mantenimiento) de la autonomia.
 
 Con respecto a la autonomía universitaria, García dice:
 
 \begin{itemize}
-    \item ``Tener claro en qué consistía la autonomía universitaria y por qué era indispensable defenderla nos permitió negociar con diversas instituciones, incluso extranjeras, para obtener subsidios sin quedar subordinados a las decisiones que muchos intentaron imponer junto con los financiamientos.''
-    \item ``Pero la autonomía no significaba, para nosotros, el aislamiento ante los problemas del país y del mundo. Casualmente, revisando en estos días viejos papeles, encontré un documento que vale la pena citar porque tiene que ver, precisamente, con las implicaciones políticas de nuestra posición. Mientras yo mantenía relación con la Fundación Ford y con otras organizaciones norteamericanas, en el año 1965 tuvo Lugar La invasión a Santo Domingo. En la Facultad de Ciencias Exactas y Naturales, expresamos nuestra condena con actos públicos.''
+    \item ``Tener claro en qué consistía la autonomía universitaria y por qué era indispensable defenderla nos permitió negociar con diversas instituciones, incluso extranjeras, para obtener subsidios sin quedar subordinados a las decisiones que muchos intentaron imponer junto con los financiamientos''.
+    \item ``Pero la autonomía no significaba, para nosotros, el aislamiento ante los problemas del país y del mundo. Casualmente, revisando en estos días viejos papeles, encontré un documento que vale la pena citar porque tiene que ver, precisamente, con las implicaciones políticas de nuestra posición. Mientras yo mantenía relación con la Fundación Ford y con otras organizaciones norteamericanas, en el año 1965 tuvo Lugar La invasión a Santo Domingo. En la Facultad de Ciencias Exactas y Naturales, expresamos nuestra condena con actos públicos''.
     % \item ``Cuando nos propusimos reconstruir la Universidad, en los años 50, enfrentamos una situación comparable en cierta medida. No era suficiente con modificar los planes de estudio, construir nuevos edificios y sustituir el personal docente y administrativo. Era necesario replantear La estructura de la institución, sus objetivos y su funcionamiento, para lo cual se requería mantener a ultranza la autonomía de la gestión. A partir de allí, \textbf{construir lo posible} significó encontrar los medios necesarios para poner en práctica la profunda reforma que nos planteamos como meta''
 \end{itemize}
 
