--- a/sabato.tex
+++ b/sabato.tex
@@ -19,8 +19,8 @@ corresponde a un actor:
 
 En el artículo mencionado, Sábato habla de autonomía como la capacidad de decisión propia, y menciona que esta es el resultado de un proceso deliberado de interrelaciones entre los vértices.
 
-Entonces, las posturas de Sábato en cuanto a la relación entre autonomía tecnológica y
-autonomía nacional se pueden analizar (¿quizás parcialmente?) desde las responsabilidades que plantea para los distintos vertices, junto con sus relaciones.
+Entonces, la postura de Sábato en cuanto a la relación entre autonomía tecnológica y
+autonomía nacional se puede analizar desde las responsabilidades que plantea para los distintos vertices, junto con sus relaciones.
 % Este proceso se establece a través del flujo de demandas que circulan en sentido vertical (gobierno - los otros dos vertices) y en sentido horizantal.
 
 Sábato distingue tres tipos de relaciones posibles:
@@ -39,25 +39,27 @@ De las \textbf{intrarelaciones}, basta mencionar que deben estructurarse con vis
 \begin{enumerate}
     \item El vertice-gobierno requiere la capacidad para realizar una \textit{acción deliberada} en el ambito de políticas cientifico-tecnologicas, con el fin de formular un cuerpo de doctrina, de principios y estrategias capaces de fijar metas posibles, cuyo logro depende de una serie de decisiones politicas, de la asignación de recursos y de la programación cientifico-tecnologica.
     \item El vertice-infraestructura cientifico-tecnologica requiere la \textit{capacidad creadora}: un cientifico mediocre producirá ideas mediocres, por más dinero que se les inyecte.
-    \item El vertice-estructura productiva requiere \textit{capacidad empresarial}, publica o privada, que si las definiremos según las ideas desarrolladas por Schumpeter, como aquella función que ``consiste en reformar o revolucionar el sistema de produccion, explotando un invento o, de manera más general, una posibilidad técnica no experimentada para producir una mercancía nueva o una mercancía antigua por un método nuevo, para abir una nueva fuente de previsión de materias primas o una nueva salida para los productos, para reorganizar una industria, etc''.
+    \item El vertice-estructura productiva requiere \textit{capacidad empresarial}, publica o privada, que se puede definir según las ideas desarrolladas por Schumpeter, como aquella función que ``consiste en reformar o revolucionar el sistema de produccion, explotando un invento o, de manera más general, una posibilidad técnica no experimentada para producir una mercancía nueva o una mercancía antigua por un método nuevo, para abir una nueva fuente de previsión de materias primas o una nueva salida para los productos, para reorganizar una industria, etc''.
 \end{enumerate}
 
-ALGUNA CONCLUSION MÁS ?
-Este segundo item está fuertemente relacionado con las ideas de Bayer de que las politicas tecnologicas deben buscar explotar las potencialidades existentes.
+El tercer item está fuertemente relacionado con las ideas de Bayer de que las politicas tecnologicas deben buscar explotar las potencialidades existentes. Creo además que Sábato concuerda con Bayer en que no solo hay que lograr innovar en tecnología, sino que ademas esta debe favorecer el desarrollo social y bienestar general.
 
 \vspace{0.5em}
 
 En cuanto a las \textbf{interrelaciones}, Sábato les asigna una responsabilidad mayuscula: la generación de una capacidad de decisión propia en el campo cientifico-tecnológico es el \textit{resultado de un proceso deliberado de interrelaciones} entre el vertice-gobierno, el vertice-infraestructura cientifico-tecnologica y el vertice-estructura productiva.
+En mis palabras, Sábato nos dice que la conquista de la autonomía tecnológica depende de \textit{fuertemente} de las interrelaciones que logremos construir entre los vértices del triangulo.
 
 Además, Sábato señala que el vértice de la infraestructura cientifico-tecnologica depende vitalmente de la acción deliberada del gobierno, entendido en un sentido muy amplio, sobre todo en lo que se refiere a asignación de recursos. Sin embargo, el vertice-gobierno juega tambien el papel de centro impulsor de demandas hacia la infraestructura cientifico-tecnologica, y es aquí donde reside la dificultad mayor en el modo como se concebirá la formulación de programas una vez tomada la decisión política.
 
+Esta idea concuerda con la posición de Bayer de que \textbf{debe existir una decisión política enmarcada en un proyecto de conquista de la autonomía nacional}. Es decir, que si el gobierno incrementa los recursos de los demás vertices, pero no hace demandas sobre estos, solo se conseguirá crecimiento aislado, que no contribuirá a la conquista de la autonomía. También es facil ver que si un gobierno hace demandas sobre los vértices, pero no les provee con los recursos suficientes para funcionar, entonces los resultados obtenidos serán acotados o pobres en su calidad.
+
 \vspace{0.5em}
 
-A continuación Sábato pasa a analizar las \textbf{extrarelaciones}.
-
-En una sociedad donde funciona el triángulo de relaciones, las aperturas que se realicen hacia el exterior en materia de exportación de ciencia y tecnología original o de adaptación de tecnología importada, producen beneficios reales, ya sea a corto o largo plazo.
+En cuanto a las \textbf{extrarelaciones}, Sábato afirma: en una sociedad donde funciona el triángulo de relaciones, las aperturas que se realicen hacia el exterior en materia de exportación de ciencia y tecnología original o de adaptación de tecnología importada, producen beneficios reales, ya sea a corto o largo plazo.
 
 Muy distinto es cuando estas aperturas se realizan entre vertices aislados con un triangulo plenamente desarrollado. Este problema es muy caracteristico de las sociedades latinoamericanas, y explica un sin fin de prolemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el cientifico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automaticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
+
+Creo que estas ideas ponen todavía más de manifiesto que Sábato concuerda con Bayer, en la necesidad de un proyecto claro a nivel nacional que busque la autonomía, ya que además comprende que la falta de este trae problemas graves que aumentan la dependencia.
 
 \vspace{0.5em}
 
