--- a/informe.tex
+++ b/informe.tex
@@ -47,6 +47,10 @@
 \input{pregunta-2}
 
 \newpage
+\section*{Conclusiones}
+\input{conclusiones}
+
+\newpage
 \bibliographystyle{plain}
 \section{Referencias}
 \begingroup
