--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -20,10 +20,11 @@
      \item Buscar una nueva inserción en el orden mundial: tranformar las formas de inserción de América Latina en el orden mundial
  \end{itemize}
 
- Las similitudes son:
+ Las similitudes con la posición de Bayer son:
 
  \begin{itemize}
-     \item
+     \item Un fuerte enfasis en la existencia de patrones de dependencia que mantienen a las naciones en vías de desarrollo en tal estado.
+     \item Además, que hace falta un proyecto de Estado con políticas claras de conquista de la autonomía.
  \end{itemize}
 
  Y las diferencias:
