--- a/bayer.tex
+++ b/bayer.tex
@@ -6,12 +6,12 @@ sino que es necesario mantenerla una vez obtenida.
 Luego, caracteriza las bases de la autonomía nacional:
 \begin{itemize}
     \item Una \textbf{configuración de poder nacional}, que ocurre cuando la acción del estado nacional
-        influencia nitidamente las acciones de los otros.
+        influencia nítidamente las acciones de los otros.
     \item \textbf{Autosuficiencia nacional}, que permite minimizar la capacidad de influencia
         de los otros estados sobre el nuestro.
 \end{itemize}
 
-En este escenario, Bayer plantea que el rol de la \textbf{política tecnólogica} es el de:
+En este escenario, Bayer plantea que el rol de la \textbf{política tecnológica} es el de:
 \begin{itemize}
     \item Suministrar a corto plazo elementos útiles para la ampliación del poder nacional.
         Por ejemplo: explotación y transformación de materias primas. Es decir,
@@ -25,25 +25,25 @@ En este escenario, Bayer plantea que el rol de la \textbf{política tecnólogica
         generalmente limitado a las capas de mayor poder adquisitivo.
 \end{itemize}
 
-Y el rol de la política cientifica:
+Y el rol de la política científica:
 \begin{itemize}
     \item Suministrar a largo plazo, los conocimientos necesarios para la sustentación de la autonomía. En particular, \textbf{ampliar y profundizar los conocimientos}, dirigidos por las necesidades del sistema en si, y no caer en el academicismo o la torre de marfil.
-        Además se debe buscar una fuerte integración entre las diversas areas del conocimiento adquirido.
-    \item Buscar la \textbf{autosuficiencia del sistema cientifico}, buscando la autosustentación, que luego le permitirá actuar como factor de activación de las potencialidades de autosuficiencia nacional a través de la calificación.
+        Además se debe buscar una fuerte integración entre las diversas áreas del conocimiento adquirido.
+    \item Buscar la \textbf{autosuficiencia del sistema científico}, buscando la autosustentación, que luego le permitirá actuar como factor de activación de las potencialidades de autosuficiencia nacional a través de la calificación.
 \end{itemize}
 
 En resumen, la política tecnológica deberá permitir conquistar la autonomía a corto
-plazo, explotando las potencialidades existentes y desarrollandose respetando el siguiente orden:
+plazo, explotando las potencialidades existentes y desarrollándose respetando el siguiente orden:
 \begin{itemize}
     \item Recursos nacionales disponibles.
     \item Necesidad de utilización interna.
     \item Posibilidades de su utilización externa.
 \end{itemize}
 
-Y luego la política cientifica será la encargada de buscar nuevas potencialidades a ser explotadas, con el fin de mantener la autonomía alcanzada. Además, deberá evitar el clientelismo cientifico, donde el cientifico justifica su investigación diciendo que sirve para el sistema, pero en realidad no.
+Y luego la política científica será la encargada de buscar nuevas potencialidades a ser explotadas, con el fin de mantener la autonomía alcanzada. Además, deberá evitar el clientelismo científico, donde el científico justifica su investigación diciendo que sirve para el sistema, pero en realidad no.
 
 \vspace{0.5em}
 
-Para finalizar, Bayer hace incapie en que \textbf{debe existir una decisión política de conquista de la autonomía nacional}. No se puede esperar la conquista de la autonomía a partir del crecimiento vegetativo de sus bases de poder y/o autosuficiencia, ya que si una nación que tiene potencialidades de poder no ha logrado su autonomía, es porque existen patrones de dependencia que le impiden despegarse del yugo de los paises desarrollados, junto con barreras sociales o materiales que le impiden alcanzar la autosuficiencia.
+Para finalizar, Bayer hace hincapié en que \textbf{debe existir una decisión política de conquista de la autonomía nacional}. No se puede esperar la conquista de la autonomía a partir del crecimiento vegetativo de sus bases de poder y/o autosuficiencia, ya que si una nación que tiene potencialidades de poder no ha logrado su autonomía, es porque existen patrones de dependencia que le impiden despegarse del yugo de los países desarrollados, junto con barreras sociales o materiales que le impiden alcanzar la autosuficiencia.
 
-En caso de que está decision política no existiese, cualquier crecimiento económico o desarrollo deberá ser encarado con reservas: el crecimiento económico, como benefactor de determinadas capas sociales, concentrador; el crecimiento cientficio, desvinculado de la sociedad como un todo, un crecimiento por el crecimiento (la llamada \textit{torre de marfil}).
+En caso de que está decisión política no existiese, cualquier crecimiento económico o desarrollo deberá ser encarado con reservas: el crecimiento económico, como benefactor de determinadas capas sociales, concentrador; el crecimiento científico, desvinculado de la sociedad como un todo, un crecimiento por el crecimiento (la llamada \textit{torre de marfil}).
