--- a/pregunta-1.tex
+++ b/pregunta-1.tex
@@ -3,10 +3,10 @@ El artículo planea la relación entre la autonomía tecnológica y la autonomí
 general de una nación (como oposición a su dependencia).
 Comparar la posición de Bayer con la Jorge Sábato y la de Rolando García con relación al mismo tema.
 
-\subsection*{Comparación con la posición de Jorge Sábato}
+\subsection{Comparación con la posición de Jorge Sábato}
 
 \input{sabato.tex}
 
-\subsection*{Comparación con la posición de Rolando García}
+\subsection{Comparación con la posición de Rolando García}
 
 \input{rolando.tex}
