--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -1,15 +1,15 @@
 \paragraph{Enunciado}
  Comparar la posición de Bayer con el planteo general del desarrollismo. ¿En qué se parecen y en qué se diferencian?
 
- \subsection*{Comparación con la posición del desarrollismo}
+ \subsection{Comparación con la posición del desarrollismo}
 
  El planteo general del desarrollismo es :
 % Youtube: Prebisch y los terminos de intercambio https://www.youtube.com/watch?v=sqUQQX1dTx8
  \begin{itemize}
-     \item Los terminos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplian la brecha entre paises desarrollados y subdesarrollados. Esto es lo que se conoce como la Tesis Prebisch-Singer.
-     \item Los paises subdesarrollados deberían combatir este hecho mediante Estados activos, con políticas económicas que impulsen la industrialización, para romper así la asimetria que genera el sistema capitalista dentro de los intercambios internacionales, y alcanzar la autonomía.
+     \item Los términos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplían la brecha entre países desarrollados y subdesarrollados. Esto es lo que se conoce como la Tesis Prebisch-Singer.
+     \item Los países subdesarrollados deberían combatir este hecho mediante Estados activos, con políticas económicas que impulsen la industrialización, para romper así la asimetría que genera el sistema capitalista dentro de los intercambios internacionales, y alcanzar la autonomía.
     %  \item En vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
-    \item La amplitud de los ciclos economicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza economica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caida.
+    \item La amplitud de los ciclos económicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza económica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caída.
  \end{itemize}
 
  Entonces los países en vías de desarrollo deben:
@@ -17,18 +17,20 @@
  \begin{itemize}
      \item Buscar la diversificación productiva e integración regional:  superar la limitada diversificación productiva y la heterogeneidad estructural.
      \item Buscar el desarrollo con igualdad: promover un desarrollo con equidad, cimentado en los cambios en la estructura productiva.
-     \item Buscar una nueva inserción en el orden mundial: tranformar las formas de inserción de América Latina en el orden mundial
+     \item Buscar una nueva inserción en el orden mundial: transformar las formas de inserción de América Latina en el orden mundial
  \end{itemize}
 
- Las similitudes con la posición de Bayer son:
+ Las \textbf{similitudes} con la posición de Bayer son:
 
  \begin{itemize}
-     \item Un fuerte enfasis en la existencia de patrones de dependencia que mantienen a las naciones en vías de desarrollo en tal estado.
-     \item Además, que hace falta un proyecto de Estado con políticas claras de conquista de la autonomía.
+     \item Un fuerte énfasis en la existencia de patrones de dependencia que mantienen a las naciones en vías de desarrollo en tal estado.
+     \item Y que a su vez, hace falta un proyecto de Estado con políticas claras de conquista de la autonomía.
+     \item Haciendo énfasis en un desarrollo con equidad.
  \end{itemize}
 
- Y las diferencias:
+ Y las \textbf{diferencias}:
 
  \begin{itemize}
-     \item El desarrollismo clasico (Prebisch)
+     \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, baja dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''. Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y creo que Bayer estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
+
  \end{itemize}
