--- a/rolando.tex
+++ b/rolando.tex
@@ -1,4 +1,4 @@
-Debido a la dificultad de encontrar textos especificos de Rolando García que hablen de políticas tecnológicas, trataré de abarcar su posición en el tema principalmente desde la charla que dió en el 2006 en la FCEyN.
+Debido a la dificultad de encontrar textos específicos de Rolando García que hablen de políticas tecnológicas, trataré de abarcar su posición en el tema principalmente desde la charla que dio en el 2006 en la FCEyN.
 
 En dicha charla, García menciona que:
 
@@ -8,9 +8,9 @@ En dicha charla, García menciona que:
     \item ``En el contexto particular de las universidades se discute mucho más sobre problemáticas puntuales que sobre el proyecto institucional en el que deberían de estar inscritas. Y es necesario subrayar que existe una gran diferencia entre un proyecto institucional y un programa de medidas propuestas o adoptadas en la coyuntura''.
 \end{itemize}
 
-Con lo cual me inclino a pensar que García entiende, como Bayer, que la conquista de la autonomía de los paises en vias de desarrollo no se puede lograr de manera vegetativa, sin tomar acciones concretas al respecto. Es necesario buscar nuevas alternativas que permitan romper el ciclo de dependencia (lo que Bayer llama, explotar las potencialidades existentes).
+Con lo cual me inclino a pensar que García entiende, como Bayer, que la conquista de la autonomía de los países en vías de desarrollo no se puede lograr de manera vegetativa, sin tomar acciones concretas al respecto. Es necesario buscar nuevas alternativas que permitan romper el ciclo de dependencia (lo que Bayer llama, explotar las potencialidades existentes).
 
-Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista ( y luego mantenimiento) de la autonomia.
+Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista ( y luego mantenimiento) de la autonomía.
 
 Con respecto a la autonomía universitaria, García dice:
 
