--- a/sabato.tex
+++ b/sabato.tex
@@ -1,11 +1,11 @@
 Abarcaré la posición de Jorge A. Sábato principalmente desde su artículo más conocido con Natalio Botana: \textit{La ciencia y
 la tecnología en el desarrollo futuro de América Latina}.
 
-En dicho artículo, los autores presentan un triangulo de relaciones (como el detallado en la Figura \ref{triangulo}) en el cual cada vertice
+En dicho artículo, los autores presentan un triangulo de relaciones (como el detallado en la Figura \ref{triangulo}) en el cual cada vértice
 corresponde a un actor:
 \begin{itemize}
     \item Gobierno: el conjunto de roles institucionales que tienen como objetivo formular políticas y movilizar recursos de y hacia los otros vértices a través de los procesos legislativo y administrativo.
-    \item Infraestructura cientifico-tecnológica: el conjunto de sistemas educativos, institutos de investigación, academias de ciencias, etc.
+    \item Infraestructura científico-tecnológica: el conjunto de sistemas educativos, institutos de investigación, academias de ciencias, etc.
     \item Estructura productiva: el conjunto de sectores productivos que provee los bienes y servicios que demanda una determinada sociedad.
 \end{itemize}
 
@@ -20,56 +20,56 @@ corresponde a un actor:
 En el artículo mencionado, Sábato habla de autonomía como la capacidad de decisión propia, y menciona que esta es el resultado de un proceso deliberado de interrelaciones entre los vértices.
 
 Entonces, la postura de Sábato en cuanto a la relación entre autonomía tecnológica y
-autonomía nacional se puede analizar desde las responsabilidades que plantea para los distintos vertices, junto con sus relaciones.
+autonomía nacional se puede analizar desde las responsabilidades que plantea para los distintos vértices, junto con sus relaciones.
 % Este proceso se establece a través del flujo de demandas que circulan en sentido vertical (gobierno - los otros dos vertices) y en sentido horizantal.
 
 Sábato distingue tres tipos de relaciones posibles:
 
 \begin{itemize}
     \item \textit{Intrarelaciones}: las que suceden entre los diferentes componentes de un mismo vértice.
-    \item \textit{Interrelaciones}: las que suceden entre dos vertices de un mismo triangulo.
-    \item \textit{Extrarelaciones}: las que suceden entre dos vertices de triangulos distintos.
+    \item \textit{Interrelaciones}: las que suceden entre dos vértices de un mismo triangulo.
+    \item \textit{Extrarelaciones}: las que suceden entre dos vértices de triángulos distintos.
 \end{itemize}
 
-De las \textbf{intrarelaciones}, basta mencionar que deben estructurarse con vista a garantizar una determinada \textit{capacidad} para generar, incorporar o transformar demandas en un producto final que es la innovacion cientifico-tecnologica. En particular:
+De las \textbf{intrarelaciones}, basta mencionar que deben estructurarse con vista a garantizar una determinada \textit{capacidad} para generar, incorporar o transformar demandas en un producto final que es la innovación científico-tecnológica. En particular:
 
 % Si hablamos de relaciones internas dentro de cada vertice, \textit{intrarelaciones}, éstas tienen por objetivo transformar a estos centros de convergencia
 % en centros capaces de generar, incorporar y transformar demandas en un producto final que es la innovacion cientifico-tecnologica. Es decir:
 
 \begin{enumerate}
-    \item El vertice-gobierno requiere la capacidad para realizar una \textit{acción deliberada} en el ambito de políticas cientifico-tecnologicas, con el fin de formular un cuerpo de doctrina, de principios y estrategias capaces de fijar metas posibles, cuyo logro depende de una serie de decisiones politicas, de la asignación de recursos y de la programación cientifico-tecnologica.
-    \item El vertice-infraestructura cientifico-tecnologica requiere la \textit{capacidad creadora}: un cientifico mediocre producirá ideas mediocres, por más dinero que se les inyecte.
-    \item El vertice-estructura productiva requiere \textit{capacidad empresarial}, publica o privada, que se puede definir según las ideas desarrolladas por Schumpeter, como aquella función que ``consiste en reformar o revolucionar el sistema de produccion, explotando un invento o, de manera más general, una posibilidad técnica no experimentada para producir una mercancía nueva o una mercancía antigua por un método nuevo, para abir una nueva fuente de previsión de materias primas o una nueva salida para los productos, para reorganizar una industria, etc''.
+    \item El vértice-gobierno requiere la capacidad para realizar una \textit{acción deliberada} en el ámbito de políticas científico-tecnológicas, con el fin de formular un cuerpo de doctrina, de principios y estrategias capaces de fijar metas posibles, cuyo logro depende de una serie de decisiones políticas, de la asignación de recursos y de la programación científico-tecnológica.
+    \item El vértice-infraestructura científico-tecnológica requiere la \textit{capacidad creadora}: un científico mediocre producirá ideas mediocres, por más dinero que se les inyecte.
+    \item El vértice-estructura productiva requiere \textit{capacidad empresarial}, publica o privada, que se puede definir según las ideas desarrolladas por Schumpeter, como aquella función que ``consiste en reformar o revolucionar el sistema de producción, explotando un invento o, de manera más general, una posibilidad técnica no experimentada para producir una mercancía nueva o una mercancía antigua por un método nuevo, para abrir una nueva fuente de previsión de materias primas o una nueva salida para los productos, para reorganizar una industria, etc''.
 \end{enumerate}
 
-El tercer item está fuertemente relacionado con las ideas de Bayer de que las politicas tecnologicas deben buscar explotar las potencialidades existentes. Creo además que Sábato concuerda con Bayer en que no solo hay que lograr innovar en tecnología, sino que ademas esta debe favorecer el desarrollo social y bienestar general.
+El tercer ítem está fuertemente relacionado con las ideas de Bayer de que las políticas tecnológicas deben buscar explotar las potencialidades existentes. Creo además que Sábato concuerda con Bayer en que no solo hay que lograr innovar en tecnología, sino que ademas esta debe favorecer el desarrollo social y bienestar general.
 
 \vspace{0.5em}
 
-En cuanto a las \textbf{interrelaciones}, Sábato les asigna una responsabilidad mayuscula: la generación de una capacidad de decisión propia en el campo cientifico-tecnológico es el \textit{resultado de un proceso deliberado de interrelaciones} entre el vertice-gobierno, el vertice-infraestructura cientifico-tecnologica y el vertice-estructura productiva.
+En cuanto a las \textbf{interrelaciones}, Sábato les asigna una responsabilidad mayúscula: la generación de una capacidad de decisión propia en el campo científico-tecnológico es el \textit{resultado de un proceso deliberado de interrelaciones} entre el vértice-gobierno, el vértice-infraestructura científico-tecnológica y el vértice-estructura productiva.
 En mis palabras, Sábato nos dice que la conquista de la autonomía tecnológica depende de \textit{fuertemente} de las interrelaciones que logremos construir entre los vértices del triangulo.
 
-Además, Sábato señala que el vértice de la infraestructura cientifico-tecnologica depende vitalmente de la acción deliberada del gobierno, entendido en un sentido muy amplio, sobre todo en lo que se refiere a asignación de recursos. Sin embargo, el vertice-gobierno juega tambien el papel de centro impulsor de demandas hacia la infraestructura cientifico-tecnologica, y es aquí donde reside la dificultad mayor en el modo como se concebirá la formulación de programas una vez tomada la decisión política.
+Además, Sábato señala que el vértice de la infraestructura científico-tecnológica depende vitalmente de la acción deliberada del gobierno, entendido en un sentido muy amplio, sobre todo en lo que se refiere a asignación de recursos. Sin embargo, el vértice-gobierno juega también el papel de centro impulsor de demandas hacia la infraestructura científico-tecnológica, y es aquí donde reside la dificultad mayor en el modo como se concebirá la formulación de programas una vez tomada la decisión política.
 
-Esta idea concuerda con la posición de Bayer de que \textbf{debe existir una decisión política enmarcada en un proyecto de conquista de la autonomía nacional}. Es decir, que si el gobierno incrementa los recursos de los demás vertices, pero no hace demandas sobre estos, solo se conseguirá crecimiento aislado, que no contribuirá a la conquista de la autonomía. También es facil ver que si un gobierno hace demandas sobre los vértices, pero no les provee con los recursos suficientes para funcionar, entonces los resultados obtenidos serán acotados o pobres en su calidad.
+Esta idea concuerda con la posición de Bayer de que \textbf{debe existir una decisión política enmarcada en un proyecto de conquista de la autonomía nacional}. Es decir, que si el gobierno incrementa los recursos de los demás vértices, pero no hace demandas sobre estos, solo se conseguirá crecimiento aislado, que no contribuirá a la conquista de la autonomía. También es fácil ver que si un gobierno hace demandas sobre los vértices, pero no les provee con los recursos suficientes para funcionar, entonces los resultados obtenidos serán acotados o pobres en su calidad.
 
 \vspace{0.5em}
 
 En cuanto a las \textbf{extrarelaciones}, Sábato afirma: en una sociedad donde funciona el triángulo de relaciones, las aperturas que se realicen hacia el exterior en materia de exportación de ciencia y tecnología original o de adaptación de tecnología importada, producen beneficios reales, ya sea a corto o largo plazo.
 
-Muy distinto es cuando estas aperturas se realizan entre vertices aislados con un triangulo plenamente desarrollado. Este problema es muy caracteristico de las sociedades latinoamericanas, y explica un sin fin de prolemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el cientifico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automaticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
+Muy distinto es cuando estas aperturas se realizan entre vértices aislados con un triangulo plenamente desarrollado. Este problema es muy característico de las sociedades latinoamericanas, y explica un sin fin de problemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el científico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automáticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
 
 Creo que estas ideas ponen todavía más de manifiesto que Sábato concuerda con Bayer, en la necesidad de un proyecto claro a nivel nacional que busque la autonomía, ya que además comprende que la falta de este trae problemas graves que aumentan la dependencia.
 
 \vspace{0.5em}
 
-Habíendo dicho esto, Sábato afirma que en América Latina no existe un sistema de relaciones como el mencionado, ni tampoco hay conciencia acerca de la necesidad impostergable de establecerlo, por lo que hay una doble exigencia para las naciones en vías de desarrollo que busquen alcanzar su autonomía:
+Habiendo dicho esto, Sábato afirma que en América Latina no existe un sistema de relaciones como el mencionado, ni tampoco hay conciencia acerca de la necesidad impostergable de establecerlo, por lo que hay una doble exigencia para las naciones en vías de desarrollo que busquen alcanzar su autonomía:
 \begin{itemize}
     \item Crear una conciencia global para que nuestras sociedades asuman este problema en sus dimensiones reales.
     \item Actuar eficazmente sobre aquellos sectores en los cuales se podrían optimizar los recursos escasos en función del sistema de relaciones perseguido.
 \end{itemize}
 
-Además, Sabáto reafirma: corresponde al sector gubernamental formular una política tendiente a \textit{acoplar} la infraestructura cientifico-tecnologica al proceso de producción, ya sea creando los centros que así lo permitan o relacionando los centros ya existentes.
+Además, Sábato reafirma: corresponde al sector gubernamental formular una política tendiente a \textit{acoplar} la infraestructura científico-tecnológica al proceso de producción, ya sea creando los centros que así lo permitan o relacionando los centros ya existentes.
 
 \vspace{0.5em}
 
@@ -78,7 +78,7 @@ Por último, quisiera dar un ejemplo concreto que presenta Sábato en su artícu
 \begin{itemize}
     \item La existencia de un mercado importante y en rápido crecimiento.
     \item En el campo de la energía eléctrica, la Argentina era neto importador de tecnología.
-    \item Existía capacidad científico-tecnológica apta para la producción de tecnología eléctica. La demanda interna era, sin embargo, muy escasa y de poca significación cualitativa.
+    \item Existía capacidad científico-tecnológica apta para la producción de tecnología eléctrica. La demanda interna era, sin embargo, muy escasa y de poca significación cualitativa.
     \item Por tratarse de un tipo de actividad que tenía poca tradición en el país, sobre cuya necesidad no existía aún conciencia clara y que requería capital de riesgo, sólo el Estado estaba en condiciones de ponerla en marcha.
 \end{itemize}
 
